<resources>
    <string name="app_name">Didan</string>
    <string name="logoDescription">didan_logo</string>
    <string name="text_login">Логин или UID</string>
    <string name="text_password">Пароль</string>
    <string name="text_button">Войти</string>
    <string name="text_hello">Ваша домашняя сеть!</string>
    <string name="text_account">Общая информация</string>
    <string name="text_account_balance">Баланс</string>
    <string name="text_account_fill">Пополнить счет</string>
    <string name="text_account_credit">Интернет в кредит</string>
    <string name="text_active_service">Подключенные сервисы</string>
    <string name="text_payment">Оплата</string>
    <string name="text_payment_cards">Пополнение ваучером</string>
    <string name="text_payment_terminal">Пополнение через терминал</string>
    <string name="text_payment_wm">Пополнение через WebMoney</string>
    <string name="text_cd_on_map">Наш абонентский отдел</string>
    <string name="text_activity_payment_voucher">Пополнение ваучером</string>
    <string name="text_activity_payment_atm">Оплата в терминалах</string>
    <string name="text_activity_payment_wm">Оплата через WebMoney</string>
    <string name="text_activity_payment_bank">Оплата картой ЦРБ</string>
    <string name="text_activity_payment_cd">Абонентский отдел на карте</string>
    <string name="text_payment_bank">Оплата картой ЦРБ</string>
    <string name="text_voucher_id">Ваш ID для пополнения в терминалах оплаты</string>
    <string name="google_maps_api_key">AIzaSyASzwAlKdcSx2lNvSzcEkwCDgllPWFjYw4</string>
    <string name="text_voucher_series">Серия</string>
    <string name="text_voucher_number">Номер</string>
    <string name="text_voucher_button">Оплатить</string>
    <string name="text_voucher_attempts">После 5 неверных попыток - возможность пополнения карточкой будет заблокирована.</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="info_fragment">Информация</string>
    <string name="money_fragment">Деньги</string>
    <string name="card_fragment">Карта пополнения</string>
    <string name="tickets_fragment">Заявки</string>
    <string name="settings_fragment">Настройки</string>
    <string name="exit_fragment">Выход</string>
    <string name="tickets_fragment_text">Активных зявок нет</string>

    <string name="tickets_fragment_type_ticket">Тип заявки</string>
    <string name="tickets_fragment_date_ticket">Дата создания</string>
    <string name="tickets_fragment_ticket_status">Статус выполнения</string>

    <string name="settings_fragment_main_text">Номера телефонов</string>
    <string name="settings_fragment_general_number">Основной номер телефона</string>
    <string name="settings_fragment_extra_number">Доп. номер телефона</string>


    <string name="fr_ticket_theme">Тема *</string>
    <string name="fr_ticket_text">Описание *</string>
    <string name="fr_btn_submit">СОЗДАТЬ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
