<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/info_fragment"
            android:icon="@drawable/ic_stat_name"
            android:title="@string/info_fragment" />
        <item
            android:id="@+id/money_fragment"
            android:icon="@drawable/ic_money_fragment"
            android:title="@string/money_fragment" />
        <item
            android:id="@+id/card_fragment"
            android:icon="@drawable/ic_card_fragment"
            android:title="@string/card_fragment" />
        <item
            android:id="@+id/tickets_fragment"
            android:icon="@drawable/ic_request_fragment"
            android:title="@string/tickets_fragment" />
        <item
            android:id="@+id/settings_fragment"
            android:icon="@drawable/ic_settings_fragment"
            android:title="@string/settings_fragment" />
        <item
            android:id="@+id/exit_fragment"
            android:icon="@drawable/ic_exit_fragment"
            android:title="@string/exit_fragment" />
    </group>
</menu>