<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/main_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fusion.didan_billing.fragments.FragmentVoucher">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/fieldVoucherSeries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:focusable="true"
        android:hint="@string/text_voucher_series"
        android:textColorHint="#3a59a2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/fieldVoucherNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:focusable="true"
        android:hint="@string/text_voucher_number"
        android:textColorHint="#3a59a2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/fieldVoucherSeries"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textViewAttempts"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_voucher_attempts"
        android:gravity="center"
        android:textColor="@color/colorRed"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/fieldVoucherNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.428" />

    <Button
        android:id="@+id/btnSendMoney"
        android:background="@drawable/button_config"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/text_voucher_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="159dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewAttempts" />

</android.support.constraint.ConstraintLayout>
