<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior= "@string/appbar_scrolling_view_behavior"
    tools:context=".UserDataActivity"
    tools:showIn="@layout/fragment_tickets"
    android:id="@+id/containerTickets">

    <TextView
        android:id="@+id/currentTicket"
        android:text="@string/tickets_fragment_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="265dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/myrect"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textPolomka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/tickets_fragment_type_ticket"
                android:textColor="@color/colorGrey2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textAddDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tickets_fragment_date_ticket"
                android:textColor="@color/colorGrey2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/tickets_fragment_ticket_status"
                android:textColor="@color/colorGrey2"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textPolomkaText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:gravity="end"
                android:text=""
                android:textColor="@color/colorGrey2"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textAddDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text=""
                android:textColor="@color/colorGrey2"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textStateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text=""
                android:textColor="@color/colorGrey2"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>