<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".PaymentActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewCards"
        android:layout_width="130dp"
        android:layout_height="150dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardViewBank"
        android:layout_marginLeft="24dp"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@anim/animation"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="18dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_card" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_payment_cards"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewAtm"
        android:layout_width="130dp"
        android:layout_height="150dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="24dp"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@anim/animation"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_atm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_payment_terminal"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewWM"
        android:layout_width="130dp"
        android:layout_height="150dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@anim/animation"
        app:layout_constraintTop_toBottomOf="@+id/cardViewAtm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_wm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_payment_wm"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewCd"
        android:layout_width="130dp"
        android:layout_height="150dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@anim/animation"
        app:layout_constraintTop_toBottomOf="@+id/cardViewCards">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_map" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_activity_payment_cd"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="130dp"
        android:layout_height="150dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@anim/animation"
        android:id="@+id/cardViewBank">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_bank" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_payment_bank"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>